@@ -52,6 +52,8 @@ $EPrints::XML::PREFIX = "XML::DOM::";
 *XML::DOM::Element::tagName = \&XML::DOM::Element::getTagName;
 *XML::DOM::NamedNodeMap::length = \&XML::DOM::NamedNodeMap::getLength;
 *XML::DOM::Element::hasAttribute = sub { defined(shift->getAttributeNode(@_)) };
+*XML::DOM::Node::childNodes = \&XML::DOM::Node::getChildNodes;
+*XML::DOM::Node::firstChild = \&XML::DOM::Node::getFirstChild;
 
 ######################################################################
 # 
